# Rain

./: .gitignore  README.md  WEBGL_RENDERER_PLAN.md  index.html  justfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: check-bundle-size.js  test-tmux.sh  test-triggers.sh
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  macos-only.json
src-tauri/icons/Rain.icon/: icon.json
src-tauri/icons/default-icon-generated/: icon.icns
src-tauri/icons/simple-icon-generated/: icon.icns
src-tauri/shell-hooks/: rain.bash  rain.fish  rain.ps1  rain.zsh
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/ipc/: commands.rs  events.rs  mod.rs
src-tauri/src/ipc/commands/: config.rs  filesystem.rs  mod.rs  session.rs  tmux.rs  transfer.rs  window.rs
src-tauri/src/pty/: mod.rs  reader.rs  session.rs
src-tauri/src/render/: frame.rs  mod.rs
src-tauri/src/shell/: detect.rs  hooks.rs  mod.rs
src-tauri/src/terminal/: color.rs  cursor.rs  grid.rs  mod.rs  modes.rs  state.rs
src-tauri/src/tmux/: controller.rs  mod.rs  parser.rs  state.rs
src/components/: Block.tsx  BlockFooter.tsx  BlockHeader.tsx  CanvasTerminal.tsx  CommandPalette.tsx  ContextMenu.tsx  Cursor.tsx  HistoryBrowser.tsx  HslColorPicker.tsx  PaneContainer.tsx  Scrollbar.tsx  Settings.tsx  StatusBar.tsx  TabBar.tsx  Terminal.tsx  TerminalLine.tsx  TimeGroup.tsx  Toast.tsx  icons.tsx
src/lib/: canvasRenderer.ts  captureTerminal.ts  color.ts  font.ts  glass.ts  input.ts  ipc.ts  types.ts  (+13 more)
(+29 files in other folders)
