[package]
name = "rain"
version = "0.1.0"
edition = "2021"
description = "A modern terminal emulator"
license = "MIT"

[lib]
name = "rain_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-liquid-glass = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
vte = "0.13"
unicode-segmentation = "1"
unicode-width = "0.1"
bitflags = "2"
crossbeam-channel = "0.5"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
hostname = "0.4"
base64 = "0.22"
arboard = "3"
libc = "0.2"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSResponder", "NSColor", "NSImage", "NSApplication", "NSRunningApplication"] }
objc2-foundation = "0.3"
tauri-plugin-global-shortcut = "2.3.1"
rfd = "0.17.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
